# dotfiles

./: README.md  abcde.conf  aliases  aliases.local  default-cargo-crates  default-gems  editorconfig  gitconfig.local  gvimrc  railsrc  rcrc  tmux.conf.local  tool-versions  vimrc.bundles  vimrc.bundles.local  vimrc.local  zshrc.local
config/alacritty/: alacritty.toml  alacritty.yml  keybindings.toml
config/sway/: config
hooks/: post-up
host-ghewett-linux-dev/config/alacritty/: alacritty.yml
host-glhewett-dev/config/alacritty/: alacritty.yml
skeletons/: CMakeLists.txt  cpp.cpp  projections.json
ssh/: config  rc
vim/after/ftplugin/: json.vim  markdown.vim  python.vim  ruby.vim  rust.vim  swift.vim
vim/ftplugin/: markdown.vim  sql.vim
zsh/configs/: cargo.zsh  check-version.zsh  homebrew-local.zsh  local_builds.zsh  postgresql.zsh  qt.zsh  self-compiled.zsh  ssh-agent.zsh
zsh/configs/pre/: local_builds.zsh
zsh/functions/: base58  check-version  create-password
